# kernel_gateway

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile.dev  LICENSE.md  Makefile  README.md  codecov.yml  conftest.py  pyproject.toml  readthedocs.yml  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-release.yml  tests.yml
docs/: environment.yml
docs/source/: conf.py  config-options.md  devinstall.md  features.md  getting-started.md  http-mode.md  index.rst  plug-in.md  summary-changes.md  troubleshooting.md  uses.md  websocket-mode.md
etc/: kg_api_test.ipynb  scotch_api.ipynb
etc/api_examples/: api_intro.ipynb  endpoint_ordering.ipynb  setting_response_metadata.ipynb
kernel_gateway/: __init__.py  __main__.py  _version.py  gatewayapp.py  mixins.py
kernel_gateway/auth/: identity.py
kernel_gateway/base/: handlers.py
kernel_gateway/jupyter_websocket/: __init__.py  handlers.py  swagger.json  swagger.yaml
kernel_gateway/notebook_http/: __init__.py  errors.py  handlers.py  request_utils.py
kernel_gateway/notebook_http/cell/: parser.py
kernel_gateway/notebook_http/swagger/: builders.py  handlers.py  parser.py
kernel_gateway/services/activity/: manager.py
kernel_gateway/services/cell/: parser.py
kernel_gateway/services/kernels/: handlers.py  manager.py  pool.py
kernel_gateway/services/kernelspecs/: handlers.py
kernel_gateway/services/notebooks/: handlers.py  request_utils.py
kernel_gateway/services/sessions/: handlers.py  sessionmanager.py
kernel_gateway/tests/: async_test_helper.py  conftest.py  test_gatewayapp.py  test_jupyter_websocket.py  test_mixins.py  test_notebook_http.py
kernel_gateway/tests/notebook_http/: test_request_utils.py
kernel_gateway/tests/notebook_http/cell/: test_parser.py
kernel_gateway/tests/notebook_http/swagger/: test_builders.py  test_parser.py
kernel_gateway/tests/resources/: responses.ipynb
kernel_gateway/tests/services/cell/: test_parser.py
kernel_gateway/tests/services/notebooks/: test_request_utils.py
tests/: conftest.py  test_notebook_http.py
tests/resources/: kernel_api.ipynb  responses.ipynb  weirdly%20named#notebook.ipynb
