[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "jupyter-kernel-gateway"
dynamic = ["version"]
description = "A web server for spawning and communicating with Jupyter kernels"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.8"
authors = [
    { name = "Jupyter Development Team", email = "jupyter@googlegroups.com" },
]
keywords = [
    "Cloud",
    "Interactive",
    "Interpreter",
    "Kernel",
    "Web",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_client>=7.4.4",
    "jupyter_core>=4.12,!=5.0.*",
    "jupyter_server>=2.0",
    "requests>=2.7,<3.0",
    "tornado>=6.2.0",
    "traitlets>=5.6.0",
]

[project.scripts]
jupyter-kernelgateway = "kernel_gateway:launch_instance"

[project.urls]
Homepage = "http://github.com/jupyter-incubator/kernel_gateway"

[project.optional-dependencies]
test = [
  "coverage",
  "pytest",
  "pytest-cov",
  "pytest_jupyter",
  "pytest-timeout",
  "ipykernel",
]
docs = [
  "sphinx_rtd_theme",
  "sphinx",
  "myst-parser",
]

[tool.hatch.version]
path = "kernel_gateway/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/kernel_gateway",
]

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "make -C docs html SPHINXOPTS='-W'"

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
test = "python -m pytest -vv {args}"

[tool.hatch.envs.cov]
features = ["test"]
dependencies = ["coverage[toml]", "pytest-cov"]
[tool.hatch.envs.cov.scripts]
test = "python -m pytest -vv --cov kernel_gateway --cov-branch --cov-report term-missing:skip-covered {args}"
